# practice-01

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  auth.py  entry.sh  main.py  model.py  pyproject.toml  test_user.py
backend/MyAlembic/versions/: 015b95890a72_create_user_table.py  fa9c1a3035ad_create_users_table.py
database/: Dockerfile  Makefile
frontend/: Dockerfile  Makefile  README.md  package-lock.json  package.json
frontend/src/: App.vue  api.js  axios.js  router.js
frontend/src/views/: LoginPage.vue  ProfilePage.vue  RegisterPage.vue  UpdatePage.vue
